UI Audit Corrections